--- a/frontend/mi-portfolio-react/src/App.css
+++ b/frontend/mi-portfolio-react/src/App.css
@@ -1,3 +1,6 @@
+/* App.css */
+
+/* Estilos generales */
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -11,17 +14,21 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+/* Animación del logo */
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -33,10 +40,21 @@
   }
 }
 
+/* Tarjetas y texto de ayuda */
 .card {
   padding: 2em;
+  background-color: #f3f4f6;
+  /* Gris claro */
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .read-the-docs {
   color: #888;
+}
+
+
+#home {
+  scroll-margin-top: 64px;
+  /* Ajusta este valor para que coincida con la altura de tu header */
 }
