--- a/frontend/mi-portfolio-react/src/assets/TravelMap.css
+++ b/frontend/mi-portfolio-react/src/assets/TravelMap.css
@@ -1,34 +1,11 @@
 .map-container {
     width: 100%;
-    height: 650px;
+    height: 50vh;
+    /* Ocupa el 50% de la altura de la ventana */
     max-width: 500px;
     margin: 0 auto;
     box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1), 0 4px 6px rgba(0, 0, 0, 0.05);
     border-radius: 10px;
     overflow: hidden;
     z-index: 0;
-    /* Baja prioridad de superposición */
-}
-
-
-
-.tooltip-content {
-    background: rgba(255, 255, 255, 0.9);
-    border-radius: 8px;
-    padding: 0.5em;
-    font-size: 0.9rem;
-    color: #333;
-    text-align: center;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.tooltip-content img {
-    width: 100px;
-    height: auto;
-    object-fit: cover;
-    aspect-ratio: 4 / 3;
-    border-radius: 0.375rem;
-    /* Esto aplica el borde redondeado */
-    margin-top: 0.5rem;
-    /* Espacio superior para separar la imagen del texto */
 }
